added version ton config file

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -13,6 +13,7 @@ name: AngularJS
 parsed_name: angularjs
 default_uri: /angularjs/ng
 scraper_name: angular
+version: 1.4.5
 zip_url:  
 sort: 1
 additional: false
@@ -22,6 +23,7 @@ name: Apache
 parsed_name: apache
 default_uri: /apache/core
 scraper_name: apache
+version: 2.4.12
 zip_url:  
 sort: 2
 additional: false
@@ -31,6 +33,7 @@ name: ASP.NET
 parsed_name: asp.net
 default_uri: /asp.net/index
 scraper_name:
+version:
 zip_url:  
 sort: 3
 additional: false
@@ -40,6 +43,7 @@ name: Elixir
 parsed_name: elixir
 default_uri: /elixir/index
 scraper_name: elixir
+version: 1.1.1
 zip_url:  
 sort: 4
 additional: false
@@ -49,6 +53,7 @@ name: BackboneJS
 parsed_name: backbonejs
 default_uri: /backbonejs/backbone.$
 scraper_name: backbone
+version: 1.2.3
 zip_url:  
 sort: 5
 additional: false
@@ -58,6 +63,7 @@ name: Bower
 parsed_name: bower
 default_uri: /bower/creating_packages
 scraper_name: bower
+version: 1.4.1
 zip_url:  
 sort: 6
 additional: false
@@ -67,6 +73,7 @@ name: Bootstrap
 parsed_name: bootstrap
 default_uri: /bootstrap/getting_started
 scraper_name: bootstrap
+version: 3.3.35
 zip_url:  
 sort: 7
 additional: false
@@ -76,6 +83,7 @@ name: Browserify
 parsed_name: browserify
 default_uri: /browserify/getting_started
 scraper_name: browserify
+version: 11.0.1
 zip_url:  
 sort: 8
 additional: false
@@ -85,6 +93,7 @@ name: C
 parsed_name: c
 default_uri: /c/c_keywords
 scraper_name: c
+version:
 zip_url: http://upload.cppreference.com/mwiki/images/6/6c/html_book_20141118.tar.gz 
 sort: 9
 additional: false
@@ -94,15 +103,17 @@ name: Chai
 parsed_name: chai
 default_uri: /chai/api_reference
 scraper_name: chai
+version:
 zip_url:  
 sort: 11
 additional: false
-active: false
+active: true
 [chef]
 name: Chef
 parsed_name: chef
 default_uri: chef/all_about_chef_...
 scraper_name: chef
+version: 12.4
 zip_url:  
 sort: 12
 additional: false
@@ -112,6 +123,7 @@ name: Clojure
 parsed_name: clojure
 default_uri: /clojure/clojure.core
 scraper_name: clojure
+version: 1.7
 zip_url:  
 sort: 13
 additional: false
@@ -121,6 +133,7 @@ name: CoffeeScript
 parsed_name: coffeescript
 default_uri: /coffeescript/index
 scraper_name: coffeescript
+version: 1.10.0
 zip_url:  
 sort: 14
 additional: false
@@ -130,6 +143,7 @@ name: Apache Cordova
 parsed_name: apache_cordova
 default_uri: /apache-cordova/overview
 scraper_name: cordova
+version: 5.1.1
 zip_url:  
 sort: 15
 additional: false
@@ -139,6 +153,7 @@ name: Cpp
 parsed_name: cpp
 default_uri: /cpp/c++_language
 scraper_name: cpp
+version:
 zip_url:  
 sort: 16
 additional: false
@@ -148,6 +163,7 @@ name: CSS
 parsed_name: css
 default_uri: /css/universal_selectors
 scraper_name: css
+version:
 zip_url:  
 sort: 0
 additional: false
@@ -157,15 +173,17 @@ name: D3
 parsed_name: d3
 default_uri: /d3/namespaces
 scraper_name: d3
+version:
 zip_url:  
 sort: 17
 additional: false
-active: true
+active: false
 [django]
 name: Django
 parsed_name: django
 default_uri: /django/getting_started
 scraper_name: django
+version: 1.8.4
 zip_url: https://docs.djangoproject.com/m/docs/django-docs-1.8-en.zip 
 sort: 18
 additional: false
@@ -175,6 +193,7 @@ name: DOM
 parsed_name: dom
 default_uri: /dom/document
 scraper_name: dom
+version:
 zip_url:  
 sort: 10
 additional: false
@@ -184,6 +203,7 @@ name: Dojo
 parsed_name: dojo
 default_uri: /dojo/index
 scraper_name: dojo
+version: 1.10
 zip_url:  
 sort: 19
 additional: false
@@ -193,6 +213,7 @@ name: DOM Events
 parsed_name: dom_events
 default_uri: /dom_events/click
 scraper_name: dom_events
+version:
 zip_url:  
 sort: 20
 additional: false
@@ -202,15 +223,17 @@ name: Drupal
 parsed_name: drupal
 default_uri: /drupal
 scraper_name: drupal
+version:
 zip_url:  
 sort: 21
 additional: false
-active: true
+active: false
 [ember]
 name: EmberJS
 parsed_name: emberjs
 default_uri: /ember/classes/namespace
 scraper_name: ember
+version: 2.0.1
 zip_url:  
 sort: 22
 additional: false
@@ -220,6 +243,7 @@ name: Express
 parsed_name: express
 default_uri: /express/express
 scraper_name: express
+version:
 zip_url:  
 sort: 23
 additional: false
@@ -229,6 +253,7 @@ name: Flow
 parsed_name: flow
 default_uri: /flow/index
 scraper_name: flow
+version: 
 zip_url:  
 sort: 24
 additional: false
@@ -238,15 +263,17 @@ name: Git
 parsed_name: git
 default_uri: /git/git
 scraper_name: git
+version:
 zip_url:  
 sort: 25
 additional: false
-active: true
+active: false
 [go]
 name: Go
 parsed_name: go
 default_uri: /go/go_programming_language/community
 scraper_name: go
+version: 1.5.0
 zip_url:  
 sort: 26
 additional: false
@@ -256,6 +283,7 @@ name: Grunt
 parsed_name: grunt
 default_uri: /grunt/grunt
 scraper_name: grunt
+version: 0.4.5
 zip_url:  
 sort: 27
 additional: false
@@ -265,6 +293,7 @@ name: HTML
 parsed_name: html
 default_uri: /html/html_attribute_reference
 scraper_name: html
+version:
 zip_url:  
 sort: 30
 additional: false
@@ -274,6 +303,7 @@ name: Http
 parsed_name: http
 default_uri: /http/200_ok
 scraper_name: http
+version:
 zip_url:  
 sort: 28
 additional: false
@@ -283,6 +313,7 @@ name: Haskell
 parsed_name: haskell
 default_uri: /haskell/index
 scraper_name: haskell
+version: 7.10.2
 zip_url:  
 sort: 29
 additional: false
@@ -292,6 +323,7 @@ name: ioJS
 parsed_name: iojs
 default_uri: /iojs/index
 scraper_name: iojs
+version: 3.2.0
 zip_url:  
 sort: 31
 additional: false
@@ -301,6 +333,7 @@ name: Jasmine
 parsed_name: jasmine
 default_uri: /jasmine/introduction
 scraper_name: jasmine
+version: edge
 zip_url:  
 sort: 32
 additional: false
@@ -310,6 +343,7 @@ name: JavaScript
 parsed_name: javascript
 default_uri: /javascript/statements_and_declarations
 scraper_name: javascript
+version:
 zip_url:  
 sort: 40
 additional: false
@@ -319,6 +353,7 @@ name: Java 7 SE
 parsed_name: java7se
 default_uri: /java7se/
 scraper_name: java7se
+version: 7_se
 zip_url:  
 sort: 33
 additional: false
@@ -328,15 +363,17 @@ name: Jest
 parsed_name: jest
 default_uri: /jest/getting_started
 scraper_name: jest
+version:
 zip_url:  
 sort: 34
 additional: false
-active: true
+active: false
 [jquery]
 name: JQuery
 parsed_name: jquery
 default_uri: /jquery/index
 scraper_name: jquery_core
+version: up_to_2.1.0
 zip_url:  
 sort: 35
 additional: false
@@ -346,6 +383,7 @@ name: JQuery UI
 parsed_name: jquery_ui
 default_uri: /jqueryui/color-animation
 scraper_name: jquery_ui
+version: 1.10.4
 zip_url:  
 sort: 36
 additional: false
@@ -355,6 +393,7 @@ name: JQuery Mobile
 parsed_name: jquery_mobile
 default_uri: /jquerymobile/classes
 scraper_name: jquery_mobile
+version: 1.4.0
 zip_url:  
 sort: 37
 additional: false
@@ -364,6 +403,7 @@ name: Knex
 parsed_name: knex
 default_uri: /knex/index
 scraper_name: knex
+version: 0.8.6
 zip_url:  
 sort: 38
 additional: false
@@ -373,6 +413,7 @@ name: KnockOut
 parsed_name: knockout
 default_uri: /knockout/knockout.js
 scraper_name: knockout
+version: 3.3.0
 zip_url:  
 sort: 39
 additional: false
@@ -382,6 +423,7 @@ name: Less
 parsed_name: less
 default_uri: /less/misc_functions
 scraper_name: less
+version: 2.5.0
 zip_url:  
 sort: 41
 additional: false
@@ -391,15 +433,17 @@ name: Laravel
 parsed_name: laravel
 default_uri: /laravel/namespaces
 scraper_name: laravel
+version: 5.1.1
 zip_url:  
 sort: 42
 additional: false
-active: true
+active: false
 [lodash]
 name: Lo-Dash
 parsed_name: lodash
 default_uri: /lodash/_
 scraper_name: lodash
+version: 3.10.0
 zip_url:  
 sort: 43
 additional: false
@@ -409,6 +453,7 @@ name: Lua
 parsed_name: lua
 default_uri: /lua/manual
 scraper_name: lua
+version: 5.3
 zip_url:  
 sort: 44
 additional: false
@@ -418,6 +463,7 @@ name: Marionette
 parsed_name: marionette
 default_uri: /marionette/api
 scraper_name: marionette
+version: 2.4.3
 zip_url:  
 sort: 45
 additional: false
@@ -427,6 +473,7 @@ name: MarkDown
 parsed_name: markdown
 default_uri: /markdown/inline_html
 scraper_name: markdown
+version:
 zip_url:  
 sort: 46
 additional: false
@@ -436,6 +483,7 @@ name: Mocha
 parsed_name: mocha
 default_uri: /mocha/index
 scraper_name: mocha
+version: 2.2.1
 zip_url:  
 sort: 47
 additional: false
@@ -445,6 +493,7 @@ name: Modernizr
 parsed_name: modernizr
 default_uri: /modernizr/index
 scraper_name: modernizr
+version: 2.8.3
 zip_url:  
 sort: 48
 additional: false
@@ -454,6 +503,7 @@ name: Moment
 parsed_name: moment
 default_uri: /moment/index
 scraper_name: moment
+version: 2.10.2
 zip_url:  
 sort: 49
 additional: false
@@ -463,6 +513,7 @@ name: Mysql
 parsed_name: mysql
 default_uri: /mysql/index
 scraper_name: mysql
+version: 5.7
 zip_url:  
 sort: 51
 additional: false
@@ -472,6 +523,7 @@ name: MongooseJS
 parsed_name: mongoosejs
 default_uri: /mongoosejs/index
 scraper_name: mongoose
+version: 4.1.6
 zip_url:  
 sort: 52
 additional: false
@@ -481,6 +533,7 @@ name: Nginx
 parsed_name: nginx
 default_uri: /nginx/guide/beginner’s_guide
 scraper_name: nginx
+version: 1.9.4
 zip_url:  
 sort: 53
 additional: false
@@ -490,6 +543,7 @@ name: NodeJS
 parsed_name: node
 default_uri: /nodejs/assert
 scraper_name: node
+version: 4.0.0
 zip_url:  
 sort: 54
 additional: false
@@ -499,6 +553,7 @@ name: NodeJS LTS
 parsed_name: node_lts
 default_uri: /nodejs_lts/assert
 scraper_name: node_lts
+version: 4.2.1
 zip_url:  
 sort: 55
 additional: false
@@ -508,15 +563,17 @@ parsed_name: nokogiri
 name: Nokogiri
 default_uri: /nokogiri/top_level_namespace
 scraper_name: nokogiri2
+version:
 zip_url:  
 sort: 56
 additional: false
-active: true
+active: false
 [npm]
 name: npm
 parsed_name: npm
 default_uri: /npm/faq
 scraper_name: npm
+version: 2.13.0
 zip_url:  
 sort: 57
 additional: false
@@ -526,6 +583,7 @@ name: OpenTSDB
 parsed_name: opentsdb
 default_uri: /opentsdb/index
 scraper_name: opentsdb
+version: 2.1.0
 zip_url:  
 sort: 58
 additional: false
@@ -535,6 +593,7 @@ name: Perl
 parsed_name: perl
 default_uri: /perl/index
 scraper_name: perl
+version: 5.22
 zip_url:  http://perldoc.perl.org/perldoc-html.tar.gz
 sort: 59
 additional: false
@@ -544,6 +603,7 @@ name: PHP
 parsed_name: php
 default_uri: /php/classes_and_objects
 scraper_name: php2
+version: up_to_5.6.2
 zip_url:  
 sort: 61
 additional: false
@@ -553,6 +613,7 @@ name: PHPUnit
 parsed_name: phpunit
 default_uri: /phpunit/phpunit_and_selenium
 scraper_name: phpunit
+version: 4.8
 zip_url:  
 sort: 62
 additional: false
@@ -562,6 +623,7 @@ name: Phalcon
 parsed_name: phalcon
 default_uri: /phalcon/
 scraper_name: phalcon
+version: 2.0.6
 zip_url:  
 sort: 63
 additional: false
@@ -571,6 +633,7 @@ name: Phaser
 parsed_name: phaser
 default_uri: /phaser/
 scraper_name: phaser
+version: 2.4.1
 zip_url:  
 sort: 64
 additional: false
@@ -580,24 +643,27 @@ name: Phoenix
 parsed_name: phoenix
 default_uri: /phoenix/
 scraper_name: phoenix
+version: 1.0.3
 zip_url:  
 sort: 65
 additional: false
-active: true
+active: false
 [postgresql]
 name: PostgreSQL
 parsed_name: postgresql
 default_uri: /postgresql/select
 scraper_name: postgresql
+version: 9.4
 zip_url:  
 sort: 66
 additional: false
-active: true
+active: false
 [python2]
 name: Python2
 parsed_name: python2
 default_uri: /python2/keyword
 scraper_name: python2
+version: 2.7.10
 zip_url: https://docs.python.org/2.7/archives/python-2.7.8-docs-html.zip
 sort: 67
 additional: false
@@ -607,6 +673,7 @@ name: Python3
 parsed_name: python3
 default_uri: /python3/abc
 scraper_name: python
+version: 3.5.0
 zip_url: https://docs.python.org/3/archives/python-3.5.0-docs-html.zip
 sort: 68
 additional: false
@@ -616,6 +683,7 @@ name: q
 parsed_name: q
 default_uri: /q/index
 scraper_name: q
+version: 1.4.1
 zip_url:  
 sort: 69
 additional: false
@@ -625,6 +693,7 @@ name: Rails
 parsed_name: rails
 default_uri: /rails/rails
 scraper_name: rails
+version: 4.2.0
 zip_url:  
 sort: 70
 additional: false
@@ -634,6 +703,7 @@ name: React
 parsed_name: react
 default_uri: /react/thinking_in_react
 scraper_name: react
+version: 0.13.3
 zip_url:  
 sort: 71
 additional: false
@@ -643,6 +713,7 @@ name: React native
 parsed_name: react_native
 default_uri: /react/
 scraper_name: react_native
+version: 0.10.0
 zip_url:  
 sort: 72
 additional: false
@@ -652,15 +723,17 @@ name: React Router
 parsed_name: react_router
 default_uri: /react/
 scraper_name: react_router
+version:
 zip_url:  
 sort: 73
 additional: false
-active: true
+active: false
 [redis]
 name: Redis
 parsed_name: redis
 default_uri: /redis/index
 scraper_name: redis
+version: up_to_3.0.4
 zip_url:  
 sort: 74
 additional: false
@@ -670,6 +743,7 @@ name: Reflux
 parsed_name: reflux
 default_uri: /reflux/index
 scraper_name: reflux
+version: 0.2.12
 zip_url:  
 sort: 75
 additional: false
@@ -679,6 +753,7 @@ name: Relay
 parsed_name: relay
 default_uri: /relay/index
 scraper_name: relay
+version: 0.5
 zip_url:  
 sort: 76
 additional: false
@@ -688,6 +763,7 @@ name: RequireJS
 parsed_name: requirejs
 default_uri: /requirejs/commonjs_notes
 scraper_name: requirejs
+version: 2.1.18
 zip_url:  
 sort: 77
 additional: false
@@ -697,6 +773,7 @@ name: RethinkDB
 parsed_name: rethinkdb
 default_uri: /rethinkdb/index_list
 scraper_name: rethinkdb
+version: 2.1.2
 zip_url:  
 sort: 78
 additional: false
@@ -706,6 +783,7 @@ name: Ruby
 parsed_name: ruby
 default_uri: /ruby/class
 scraper_name: ruby
+version: 2.2.2
 zip_url:  
 sort: 79
 additional: false
@@ -715,6 +793,7 @@ name: Rust
 parsed_name: rust
 default_uri: rust/2.2._hello._world!
 scraper_name: rust
+version: 1.2.0
 zip_url:  
 sort: 80
 additional: false
@@ -724,6 +803,7 @@ name: Sass
 parsed_name: sass
 default_uri: /sass/list_functions
 scraper_name: sass
+version: 3.4.7
 zip_url:  
 sort: 81
 additional: false
@@ -733,6 +813,7 @@ name: Scala
 parsed_name: scala
 default_uri: /scala/index
 scraper_name: scala
+version: 2.11
 zip_url: 
 sort: 82
 additional: false
@@ -742,6 +823,7 @@ name: SinonJS
 parsed_name: sinonjs
 default_uri: /sinonjs/spiapi
 scraper_name: sinon
+version: 1.16.1
 zip_url:  
 sort: 83
 additional: false
@@ -751,6 +833,7 @@ name: SocketIO
 parsed_name: socketio
 default_uri: /socketio/client_api
 scraper_name: socketio
+version: 1.3.6
 zip_url:  
 sort: 84
 additional: false
@@ -760,6 +843,7 @@ name: SQLite
 parsed_name: sqlite
 default_uri: /sqlite/index
 scraper_name: sqlite
+version: 3.9.1
 zip_url: https://www.sqlite.org/2015/sqlite-doc-3090100.zip
 sort: 85
 additional: false
@@ -769,6 +853,7 @@ name: SVG
 parsed_name: svg
 default_uri: /svg/index
 scraper_name: svg
+version:
 zip_url:  
 sort: 50
 additional: false
@@ -778,6 +863,7 @@ name: Swift
 parsed_name: swift
 default_uri: /swift/index
 scraper_name: swift
+version: 12.4
 zip_url:  
 sort: 86
 additional: false
@@ -787,6 +873,7 @@ name: Swift
 parsed_name: swift
 default_uri: /swift/reference/index
 scraper_name: swiftreference
+version: 12.4
 zip_url:  
 sort: 87
 additional: true
@@ -796,6 +883,7 @@ name: Symfony
 parsed_name: symfony
 default_uri: /symfony/component/console/command/listcommand
 scraper_name: symfony
+version: 2.7
 zip_url:  
 sort: 88
 additional: false
@@ -805,6 +893,7 @@ name: Twig
 parsed_name: twig
 default_uri: /twig/doc-index
 scraper_name: twig
+version: 5.7
 zip_url:  
 sort: 89
 additional: false
@@ -814,6 +903,7 @@ name: UnderscoreJS
 parsed_name: underscorejs
 default_uri: /underscorejs/all
 scraper_name: underscore
+version: 1.8.3
 zip_url:  
 sort: 90
 additional: false
@@ -823,6 +913,7 @@ name: Vue
 parsed_name: vue
 default_uri: /vue/getting_started
 scraper_name: vue
+version: 0.12.9
 zip_url:  
 sort: 91
 additional: false
@@ -832,6 +923,7 @@ name: Vagrant
 parsed_name: vagrant
 default_uri: /vagrant/index
 scraper_name: vagrant
+version: 1.7.4
 zip_url:  
 sort: 92
 additional: false
@@ -841,6 +933,7 @@ name: Webpack
 parsed_name: webpack
 default_uri: /webpack/installation
 scraper_name: webpack
+version: 1.12
 zip_url:  
 sort: 93
 additional: false
@@ -850,6 +943,7 @@ name: XPath
 parsed_name: xpath
 default_uri: /xpath/index
 scraper_name: xpath
+version:
 zip_url:  
 sort: 60
 additional: false
@@ -859,6 +953,7 @@ name: Yii
 parsed_name: yii
 default_uri: /yii/quick_start
 scraper_name: yii
+version: 2.0.2
 zip_url:  
 sort: 94
 additional: false
@@ -868,6 +963,7 @@ name: Yii1
 parsed_name: Yii1
 default_uri: /yii1
 scraper_name: yii1
+version: 1.1.16
 zip_url:  
 sort: 95
 additional: false
