--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -67,7 +67,7 @@ version: 1.4.1
 zip_url:  
 sort: 6
 additional: false
-active: true
+active: false
 [bootstrap]
 name: Bootstrap
 parsed_name: bootstrap
