--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -867,7 +867,7 @@ version: 12.4
 zip_url:  
 sort: 86
 additional: false
-active: true
+active: false
 [swiftreference]
 name: Swift
 parsed_name: swift
